[GTK] REGRESSION(r183936): Test /webkit2/WebKitWebContext/spell-checker fails since r183936 https://bugs.webkit.org/show_bug.cgi?id=144828

Reviewed by Carlos Garcia Campos.

Source/WebKit2:

Instead of setting spell checking languages unconditionally when building int
developer mode, add some C API that allows setting them in WebKitTestRunner.

* PlatformGTK.cmake: Add the new C API file to the source list.
* UIProcess/API/C/gtk/WKTextCheckerGtk.cpp:
(WKTextCheckerSetSpellCheckingLanguages): Added this function which allows settings
the spell checking languages from the C API.
* UIProcess/API/C/gtk/WKTextCheckerGtk.h: Added.
* UIProcess/gtk/TextCheckerGtk.cpp:
(WebKit::enchantTextChecker): Remove the hack which sets the spell checking languages automatically
for development builds.

Tools:

* WebKitTestRunner/gtk/main.cpp:
(main): Use the new WKTextChecker API to set the spell checking languages
when the process is starting up.

Canonical link: https://commits.webkit.org/164594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186175 268f45cc-cd09-0410-ab3c-d52691b4dbfc